# productivity-api

./: README.md  app.py  config.py  models.py  pyproject.toml  seed.py
migrations/: README
migrations/versions/: 44e10a12107d_initial_migration.py
routes/: auth.py
